hphp/hack/test/typecheck/require_class/requireclass_generic_04.bad.php.exp
ERROR: File "requireclass_generic_04.bad.php", line 7, characters 17-17:
Unbound name: `T` (an object type) (Naming[2049])
ERROR: File "requireclass_generic_04.bad.php", line 11, characters 19-19:
Unbound name: `T` (an object type) (Naming[2049])
