hphp/hack/test/typecheck/require_class/requireclass_generic_04.bad.php
<?hh


interface I {}

trait T1<T> {
  require class T;
}

trait T2<T> {
  require extends T;
}
